--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         body {
             background: #0a192f;
             color: #64ffda;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Helvetica', sans-serif;
             text-align: center;
         }
 
@@ -68,8 +68,8 @@
         <div class="stats">
             <h2>Atoms: <span id="atoms">0</span></h2>
             <h3>Current Element: <span id="currentElement">Hydrogen</span></h3>
-            <h3>Next Element Cost: <span id="elementCost">100</span> atoms</h3>
-        </div>
+            <h3>Next Element Cost: <span id="elementCost">50</span> atoms</h3>
+        </div
 
         <button class="elementButton" onclick="clickElement()">
             <div class="elementSymbol" id="currentSymbol">H</div>
@@ -83,7 +83,7 @@
 
             <h2>Auto-Clickers</h2>
             <button class="shopButton" onclick="buyAutoClicker()">
-                Buy Auto-Clicker (Cost: <span id="autoClickerCost">50</span> atoms)
+                Buy Auto-Clicker (Cost: <span id="autoClickerCost">1,000,000</span> atoms)
             </button>
             <p>Auto-Clickers: <span id="autoClickers">0</span></p>
         </div>
@@ -99,11 +99,13 @@
         const elements = [
             { name: "Hydrogen", symbol: "H", cost: 100 },
             { name: "Helium", symbol: "He", cost: 500 },
-            { name: "Lithium", symbol: "Li", cost: 1000 },
-            { name: "Beryllium", symbol: "Be", cost: 5000 },
-            { name: "Boron", symbol: "B", cost: 10000 },
-            { name: "Carbon", symbol: "C", cost: 50000 }
-        ];
+            { name: "Lithium", symbol: "Li", cost: 1,000 },
+            { name: "Beryllium", symbol: "Be", cost: 5,000 },
+            { name: "Boron", symbol: "B", cost: 10,000 },
+            { name: "Carbon", symbol: "C", cost: 50,000 }
+        ];  { name: "Uranium", symbol: "U", cost: 100,000}
+            { name: "Palladium", symbol: "PD", cost: 150,000}
+            { name: "Osmium", symbol: "OS", cost: 200,000}
 
         function updateDisplay() {
             document.getElementById('atoms').textContent = formatNumber(atoms);
