--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <main>
             <div class="element" id="fire" onclick="clickElement('fire')">
-                <img src="fire.png" alt="Fire Element">
+                <button>Fire</button>
                 <p id="fireCount">0</p>
             </div>
             <div class="element" id="water" onclick="clickElement('water')">
